# my-skills

./: .gitignore  AGENTS.md  pyproject.toml  settings.json
skills/auto-uv/: SKILL.md
skills/english-learning/: SKILL.md
skills/english-learning/evals/: evals.json
skills/first-party/auto-uv/: README.md
skills/first-party/auto-uv/evals/: evals.json
skills/first-party/english-learning/references/: templates.md
skills/first-party/learning-notes/agents/: openai.yaml
skills/first-party/ml-research-bootstrap/: SKILL.md
skills/first-party/ml-research-bootstrap/evals/: evals.json
skills/first-party/ml-research-bootstrap/references/: agents-memory-template.md  pytorch-estimator-architecture.md  repo-bootstrap-workflow.md
skills/learning-notes/: SKILL.md
skills/learning-notes/references/: note-format.md
src/my_skills/: __init__.py  cli.py  sync_skills.py
tests/: test_sync_skills.py
